--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   background-color: #74EBD5;
   background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
   min-height: 100vh;
@@ -36,4 +36,4 @@ body {
 input::placeholder {
   font-size: 0.9rem;
   color: #999;
-}
+} */
