--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,288 @@
-body {
+/* body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+} */
+
+#MainJitsi {
+  height: 100%;
+}
+
+
+/* 
+  CSS FROM video-text-message.html
+*/
+.w-layout-grid {
+  display: -ms-grid;
+  display: grid;
+  grid-auto-columns: 1fr;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: auto auto;
+  grid-template-rows: auto auto;
+  grid-row-gap: 16px;
+  grid-column-gap: 16px;
+}
+
+.body {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+}
+
+.div-block {
+  position: absolute;
+  left: auto;
+  top: 0%;
+  right: 0%;
+  bottom: 0%;
+  width: 70vw;
+}
+
+.div-block-2 {
+  width: 30vw;
+  padding-top: 10px;
+  background-color: #000813;
+}
+
+.text-block {
+  color: #fff;
+  text-align: center;
+}
+
+.text-block.less {
+  color: #a7a7a7;
+}
+
+.green {
+  grid-column-gap: 8px;
+  grid-row-gap: 8px;
+}
+
+.div-block-3 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: auto;
+  height: 14vh;
+  padding-top: 0%;
+  padding-left: 0%;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 10px;
+  background-color: #676767;
+}
+
+.div-block-3.empty-seat {
+  border: 2px solid #eb5757;
+  border-radius: 6px;
+  background-color: #c6b4b4;
+}
+
+.div-block-3.empty-seat.green {
+  border-color: #219653;
+  background-color: #b1c9bb;
+}
+
+.div-block-3.you {
+  border: 1px solid #219653;
+}
+
+.div-block-3.hover {
+  background-color: #219653;
+}
+
+.div-block-3.unfocused {
+  opacity: 0.5;
+}
+
+.div-block-4 {
+  padding: 5px 10px;
+  border-radius: 2px;
+  background-color: #eb5757;
+}
+
+.div-block-4.green {
+  background-color: #219653;
+}
+
+.div-block-5 {
+  padding-right: 5%;
+  padding-bottom: 5%;
+  padding-left: 5%;
+}
+
+.div-block-6 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 16px;
+  padding-left: 0px;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+}
+
+.div-block-7 {
+  position: fixed;
+  left: 0%;
+  top: auto;
+  right: 0%;
+  bottom: 0%;
+  z-index: 999;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 30vw;
+  height: 8vh;
+  padding-left: 20px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-top: 1px solid #9b9b9b;
+  background-color: #000813;
+}
+
+.text-block-2 {
+  color: #b1b1b1;
+}
+
+.div-block-8 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 55%;
+  margin-top: 0%;
+  padding-top: 0px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.div-block-9 {
+  width: 38px;
+  height: 38px;
+  margin-right: 3%;
+  margin-left: 3%;
+  padding-right: 0%;
+  border-radius: 100px;
+  background-color: #fff;
+  font-size: 20px;
+  padding: 8px;
+  text-align: center;
+}
+
+.div-block-10 {
+  width: 70%;
+  border-radius: 4px;
+  background-color: #2563ad;
+}
+
+.div-block-10.received {
+  background-color: #596571;
+}
+
+.text-block-3 {
+  width: 100%;
+  padding: 8px 16px;
+  color: #fff;
+}
+
+.div-block-11 {
+  position: relative;
+  left: 0%;
+  top: auto;
+  right: 0%;
+  bottom: 0%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 20px;
+  margin-right: 16px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  -webkit-box-align: end;
+  -webkit-align-items: flex-end;
+  -ms-flex-align: end;
+  align-items: flex-end;
+}
+
+.div-block-11.received {
+  margin-right: 0px;
+  margin-left: 16px;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+}
+
+.text-block-4 {
+  margin-top: 40px;
+  color: #fff;
+  font-size: 16px;
+  text-align: center;
+}
+
+.button {
+  display: inline-block;
+  margin-top: 20px;
+  padding-right: 40px;
+  padding-left: 40px;
+  border-radius: 4px;
+  background-color: #b40808;
+}
+
+.div-block-12 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
