--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,271 @@ code {
 }
 
 
+
+/* 
+  CSS FROM video-text-message.html
+*/
+
+.landing.w-layout-grid {
+  display: -ms-grid;
+  display: grid;
+  grid-auto-columns: 1fr;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: auto auto;
+  grid-template-rows: auto auto;
+  grid-row-gap: 16px;
+  grid-column-gap: 16px;
+}
+
+.landing.text-block {
+  margin-bottom: 5vh;
+  font-family: Roboto, sans-serif;
+  color: #fff;
+  font-size: 25px;
+  text-align: center;
+}
+
+.landing.grid {
+  padding-right: 5vw;
+  padding-left: 5vw;
+  -ms-grid-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.landing.div-block {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: auto;
+  height: 16vh;
+  padding-top: 0%;
+  padding-left: 0%;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 10px;
+  background-color: hsla(0, 0%, 40.7%, 0.31);
+}
+
+.landing.div-block.empty-seat {
+  border: 2px solid #eb5757;
+  border-radius: 6px;
+  background-color: #c6b4b4;
+}
+
+.landing.div-block.empty-seat.green {
+  border-color: #219653;
+  background-color: #b1c9bb;
+}
+
+.landing.div-block.empty-seat.orange {
+  border-color: #f2994a;
+  background-color: #c5b7ab;
+}
+
+.landing.div-block.empty-seat.purple {
+  border-color: #9b51e0;
+  background-color: #c5bfca;
+}
+
+.landing.div-block.empty-seat.yellow {
+  border-color: #f2c94c;
+  background-color: #c2bdad;
+}
+
+.landing.div-block.empty-seat.yellow.hover {
+  background-color: #f2c94c;
+}
+
+.landing.div-block-2 {
+  padding: 5px 10px;
+  border-radius: 2px;
+  background-color: #eb5757;
+}
+
+.landing.div-block-2.green {
+  background-color: #219653;
+}
+
+.landing.div-block-2.orange {
+  background-color: #f2994a;
+}
+
+.landing.div-block-2.purple {
+  background-color: #9b51e0;
+  color: #fff;
+}
+
+.landing.div-block-2.blue {
+  background-color: #2d9cdb;
+}
+
+.landing.text-block-2 {
+  color: #fff;
+}
+
+.landing.text-block-3 {
+  color: #fff;
+}
+
+.landing.text-block-4 {
+  color: #fff;
+}
+
+.landing.text-block-5 {
+  color: #fff;
+}
+
+.landing.text-block-6 {
+  color: #fff;
+}
+
+.landing.text-block-7 {
+  color: #fff;
+}
+
+.landing.button {
+  display: block;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.landing.div-block-3 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.landing.button-2 {
+  padding-right: 60px;
+  padding-left: 60px;
+  border-radius: 2px;
+  background-color: #676767;
+  color: #a5a5a5;
+}
+
+.landing.body-2 {
+  background-color: #0f0f0f;
+}
+
+.landing.div-block-4 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 30%;
+  margin-top: 2%;
+  padding-top: 0px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.landing.section {
+  position: absolute;
+  left: 0%;
+  top: auto;
+  right: 0%;
+  bottom: 15%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color: #e4e4e4;
+}
+
+.landing.text-block-8 {
+  margin-bottom: 3%;
+  font-size: 20px;
+  text-align: center;
+}
+
+.landing.text-block-9 {
+  margin-bottom: 2%;
+  text-align: center;
+}
+
+.landing.form-block {
+  display: block;
+  width: 25vw;
+}
+
+.landing.form {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+}
+
+.landing.text-field {
+  border-radius: 2px;
+}
+
+.landing.submit-button {
+  border-radius: 2px;
+  background-color: #2d77d3;
+}
+
+.landing.div-block-5 {
+  width: 50px;
+  height: 50px;
+  margin-right: 5%;
+  margin-left: 5%;
+  padding-right: 0%;
+  border-radius: 100px;
+  background-color: #fff;
+}
+
+
+
 /* 
   CSS FROM video-text-message.html
 */
@@ -39,6 +304,7 @@ code {
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
+  background-color: #000813;
 }
 
 .div-block {
